force-app/main/default/objects/Subscription__c/Subscription__c.object-meta.xml
<CustomObject>
    <description>Object for individual access codes and passcodes for ReadyTalk customers.</description>
    <label>Access Code</label>
    <nameField>
        <label>Access Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Access Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>