force-app/main/default/objects/Subscription__c/fields/Access_Code__c.field-meta.xml
<CustomField>
    <fullName>Access_Code__c</fullName>
    <description>This field should be removed as soon as possible so it doesn&apos;t confuse people.</description>
    <label>Access Code Old Field</label>
    <length>10</length>
    <type>Text</type>
</CustomField>