force-app/main/default/objects/Subscription__c/fields/Access_Code_Id__c.field-meta.xml
<CustomField>
    <fullName>Access_Code_Id__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Billing Primary Key</description>
    <externalId>true</externalId>
    <label>Access Code Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>