force-app/main/default/objects/Subscription__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>HYPERLINK(Contact__r.Account.Id, Contact__r.Account.Name, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscriber Account</label>
    <type>Text</type>
</CustomField>