force-app/main/default/objects/Subscription__c/fields/Account_Code_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Account_Code_Prompt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Requires chairperson to enter an internal code (billing code/client matter code) on the bridge prior to starting an audio conference.</inlineHelpText>
    <label>Account Code Prompt</label>
    <type>Checkbox</type>
</CustomField>