force-app/main/default/objects/Subscription__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Used for workflow notifications only. Not visible on the page layout.</description>
    <formula>Contact__r.Account.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>