force-app/main/default/objects/Subscription__c/fields/Add_l_Provisioning_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Add_l_Provisioning_Email_Addresses__c</fullName>
    <inlineHelpText>Separate add&#39;l email addresses with a semi-colon, comma or hard return.</inlineHelpText>
    <label>Add&#39;l Provisioning Email Addresses</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>