force-app/main/default/objects/Subscription__c/fields/Add_l_Provisioning_Emails__c.field-meta.xml
<CustomField>
    <fullName>Add_l_Provisioning_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Also send a provisioning email to additional recipients listed below (regardless of &quot;Send Provisioning Email&quot; checkbox)</description>
    <label>Send Copy of Provisioning Emails</label>
    <type>Checkbox</type>
</CustomField>