force-app/main/default/objects/Subscription__c/fields/Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Street Address 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>