force-app/main/default/objects/Subscription__c/fields/Android_App_Last_Used_Date__c.field-meta.xml
<CustomField>
    <fullName>Android_App_Last_Used_Date__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Android App Last Used Date</label>
    <type>Date</type>
</CustomField>