force-app/main/default/objects/Subscription__c/fields/App_Share_Allowed__c.field-meta.xml
<CustomField>
    <fullName>App_Share_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Provides chairperson (and co-presenters) with access to “Share Desktop,” “Share Applications,” and “Grant Control” options.</inlineHelpText>
    <label>App Share Allowed</label>
    <type>Checkbox</type>
</CustomField>