force-app/main/default/objects/Subscription__c/fields/Audio_subscription_size__c.field-meta.xml
<CustomField>
    <fullName>Audio_subscription_size__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Indicates the number of audio ports available for this access code during an audio conference.</inlineHelpText>
    <label>Number of Audio Ports</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>150</fullName>
                <default>true</default>
                <label>150</label>
            </value>
            <value>
                <fullName>300</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>