force-app/main/default/objects/Subscription__c/fields/Auto_Delete_Slides__c.field-meta.xml
<CustomField>
    <fullName>Auto_Delete_Slides__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>If checked, presentation slides will be automatically deleted when the web moderator is closed.</inlineHelpText>
    <label>Auto Delete Slides</label>
    <type>Checkbox</type>
</CustomField>