force-app/main/default/objects/Subscription__c/fields/BBS_CoreAccountId__c.field-meta.xml
<CustomField>
    <fullName>BBS_CoreAccountId__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
Account id in RT Core.</description>
    <label>RT Core AccountId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>