force-app/main/default/objects/Subscription__c/fields/BBS_L3RAMaster__c.field-meta.xml
<CustomField>
    <fullName>BBS_L3RAMaster__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
L(3) RA Master Id</description>
    <inlineHelpText>This is the L3 unique Id.</inlineHelpText>
    <label>L3 RA Master Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>