force-app/main/default/objects/Subscription__c/fields/Billing_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_ID__c</fullName>
    <description>ID of this subscription as it is in the billing system</description>
    <externalId>true</externalId>
    <label>Billing ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>