force-app/main/default/objects/Subscription__c/fields/Card_Name__c.field-meta.xml
<CustomField>
    <fullName>Card_Name__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Chairperson name (will export to invoice, CDRs, provisioning email and kits).</inlineHelpText>
    <label>Card Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>