force-app/main/default/objects/Subscription__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>