force-app/main/default/objects/Subscription__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CAUTION - USED IN INTEGRATIONS
Lookup relationship, connects contact with subscription</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Access Codes</relationshipLabel>
    <relationshipName>Subscription</relationshipName>
    <type>Lookup</type>
</CustomField>