force-app/main/default/objects/Subscription__c/fields/Contact_Start_Page__c.field-meta.xml
<CustomField>
    <fullName>Contact_Start_Page__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Web page for client to access ReadyTalk Conference Center  (Use default unless you have requested a custom start page.)</inlineHelpText>
    <label>Contact Start Page</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>http://aaimea.readytalk.com/</fullName>
            </value>
            <value>
                <fullName>http://absoluteperformance.readytalk.com</fullName>
            </value>
            <value>
                <fullName>http://acex.readytalk.com</fullName>
            </value>
            <value>
                <fullName>http://adg.readytalk.com</fullName>
            </value>
            <value>
                <fullName>http://adp.readytalk.com</fullName>
            </value>
            <value>
                <fullName>http://advanstarivt.readytalk.com</fullName>
            </value>
            <value>
                <fullName>http://advocacyinstitute.readytalk.com</fullName>
            </value>
            <value>
                <fullName>http://afstrainings.readytalk.com/</fullName>
            </value>
            <value>
                <fullName>http://albers.readytalk.com</fullName>
            </value>
            <value>
                <fullName>http://amagine.readytalk.com</fullName>
            </value>
            <value>
                <fullName>http://amerihealthmercy.readytalk.com</fullName>
            </value>
            <value>
                <fullName>http://appwave.readytalk.com</fullName>
            </value>
            <value>
                <fullName>http://aquent.readytalk.com</fullName>
            </value>
            <value>
                <fullName>http://argo.readytalk.com</fullName>
            </value>
            <value>
                <fullName>http://artiflex.readytalk.com/</fullName>
            </value>
            <value>
                <fullName>http://astadia.readytalk.com</fullName>
            </value>
            <value>
                <fullName>http://awrcorp.readytalk.com</fullName>
            </value>
            <value>
                <fullName>http://bcs.readytalk.com</fullName>
            </value>
            <value>
                <fullName>http://beyondsecurity.readytalk.com</fullName>
            </value>
            <value>
                <fullName>http://bluArc.readytalk.com</fullName>
            </value>
            <value>
                <fullName>http://bsi.readytalk.com</fullName>
            </value>
            <value>
                <fullName>http://cabinbluff.readytalk.com</fullName>
            </value>
            <value>
                <fullName>http://catalyst.readytalk.com</fullName>
            </value>
            <value>
                <fullName>http://centeris.readytalk.com</fullName>
            </value>
            <value>
                <fullName>http://churchcentral.readytalk.com</fullName>
            </value>
            <value>
                <fullName>http://cision.readytalk.com.readytalk.com/</fullName>
            </value>
            <value>
                <fullName>http://clarkcapital.readytalk.com</fullName>
            </value>
            <value>
                <fullName>http://clearforest.readytalk.com</fullName>
            </value>
            <value>
                <fullName>http://cognicion.readytalk.com</fullName>
            </value>
            <value>
                <fullName>http://commonknowledge.readytalk.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>