force-app/main/default/objects/Subscription__c/fields/Contact_Toll_Free_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Toll_Free_Number__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Conference toll-free phone number assigned to this customer.</inlineHelpText>
    <label>Toll Free Number</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>8667401260</fullName>
                <default>true</default>
                <label>8667401260</label>
            </value>
            <value>
                <fullName>3039993333</fullName>
            </value>
            <value>
                <fullName>8772948214</fullName>
            </value>
            <value>
                <fullName>8006499919</fullName>
            </value>
            <value>
                <fullName>8008301513</fullName>
            </value>
            <value>
                <fullName>8009257671</fullName>
            </value>
            <value>
                <fullName>8663654411</fullName>
            </value>
            <value>
                <fullName>8006617007</fullName>
            </value>
            <value>
                <fullName>8006772898</fullName>
            </value>
            <value>
                <fullName>8009371839</fullName>
            </value>
            <value>
                <fullName>8553484177</fullName>
            </value>
            <value>
                <fullName>8775574194</fullName>
            </value>
            <value>
                <fullName>8554304241</fullName>
            </value>
            <value>
                <fullName>8555594243</fullName>
            </value>
            <value>
                <fullName>8772217520</fullName>
            </value>
            <value>
                <fullName>8007229903</fullName>
            </value>
            <value>
                <fullName>8553914244</fullName>
            </value>
            <value>
                <fullName>8006054285</fullName>
            </value>
            <value>
                <fullName>8553554218</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>