force-app/main/default/objects/Subscription__c/fields/Contact_Toll_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Toll_Number__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS
303 248-0285 (US Toll)</description>
    <inlineHelpText>Conference toll phone number assigned to this customer.</inlineHelpText>
    <label>Toll Number</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contact_Toll_Free_Number__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>3032480285</fullName>
                <default>true</default>
                <label>3032480285</label>
            </value>
            <value>
                <fullName>6477233976</fullName>
            </value>
            <value>
                <fullName>6477233989</fullName>
            </value>
            <value>
                <fullName>6477237255</fullName>
            </value>
            <value>
                <fullName>6477236906</fullName>
            </value>
            <value>
                <fullName>3032489658</fullName>
            </value>
            <value>
                <fullName>9139049824</fullName>
            </value>
            <value>
                <fullName>9139049837</fullName>
            </value>
            <value>
                <fullName>9139049321</fullName>
            </value>
            <value>
                <fullName>9139049338</fullName>
            </value>
            <value>
                <fullName>9139049392</fullName>
            </value>
            <value>
                <fullName>9139049397</fullName>
            </value>
            <value>
                <fullName>2122313834</fullName>
            </value>
            <value>
                <fullName>9139049364</fullName>
            </value>
            <value>
                <fullName>9139049398</fullName>
            </value>
            <value>
                <fullName>2122313858</fullName>
            </value>
            <value>
                <fullName>9139049834</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>