force-app/main/default/objects/Subscription__c/fields/Coordinator_Notes_New__c.field-meta.xml
<CustomField>
    <fullName>Coordinator_Notes_New__c</fullName>
    <label>Coordinator Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>