force-app/main/default/objects/Subscription__c/fields/Copresenter_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Copresenter_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Allows chairperson to promote participant/s to presenter status.</inlineHelpText>
    <label>Copresenter Allowed</label>
    <type>Checkbox</type>
</CustomField>