force-app/main/default/objects/Subscription__c/fields/Date_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Date_Deleted__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Date Deleted</label>
    <type>DateTime</type>
</CustomField>