force-app/main/default/objects/Subscription__c/fields/Entry_Announcement__c.field-meta.xml
<CustomField>
    <fullName>Entry_Announcement__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Audio feature alerts chairperson when participants enter an audio conference (tone, silence or a name announcement). This sends an email to Level 3 to have them change it on the bridge.</inlineHelpText>
    <label>Entry Announcement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tone</fullName>
            </value>
            <value>
                <fullName>Silence</fullName>
            </value>
            <value>
                <fullName>Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>