force-app/main/default/objects/Subscription__c/fields/Event_Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Customer_Status__c</fullName>
    <formula>TEXT( Contact__r.Account.Event_Customer_Status__c )</formula>
    <label>Event Customer Status</label>
    <type>Text</type>
</CustomField>