force-app/main/default/objects/Subscription__c/fields/Event_Manager_Notes_New__c.field-meta.xml
<CustomField>
    <fullName>Event_Manager_Notes_New__c</fullName>
    <label>Event Manager Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>