force-app/main/default/objects/Subscription__c/fields/Google_Plugin_Last_Used_Date__c.field-meta.xml
<CustomField>
    <fullName>Google_Plugin_Last_Used_Date__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Google Plug-in Last Used Date</label>
    <type>Date</type>
</CustomField>