force-app/main/default/objects/Subscription__c/fields/IC_Conference_Code__c.field-meta.xml
<CustomField>
    <fullName>IC_Conference_Code__c</fullName>
    <description>InterCall Conference Code assigned to the owner.</description>
    <label>IC Conference Code</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>