force-app/main/default/objects/Subscription__c/fields/IC_Passcode__c.field-meta.xml
<CustomField>
    <fullName>IC_Passcode__c</fullName>
    <description>InterCall Conference Passcode assigned to owner number.</description>
    <label>IC Passcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>