force-app/main/default/objects/Subscription__c/fields/Inactivated_By__c.field-meta.xml
<CustomField>
    <fullName>Inactivated_By__c</fullName>
    <description>Person who inactivated the subscription</description>
    <label>Deleted By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>