force-app/main/default/objects/Subscription__c/fields/Included_Audio_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Included_Audio_Minutes__c</fullName>
    <formula>CASE( Web_Sub_Default_Type__c ,
&#39;Web Meeting Pro (25)&#39;, 1000,
&#39;Web Meeting Pro (150)&#39;, 2500,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates # of on-demand minutes included with with a web subscription (system populates upon first bill run).</inlineHelpText>
    <label>Included Audio Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>