force-app/main/default/objects/Subscription__c/fields/InterCall_Owner_Number__c.field-meta.xml
<CustomField>
    <fullName>InterCall_Owner_Number__c</fullName>
    <description>Owner ID assigned by InterCall&#39;s provisioning system and used for event reservations.</description>
    <label>InterCall Owner Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>