force-app/main/default/objects/Subscription__c/fields/International_Dial_Out_Allowed__c.field-meta.xml
<CustomField>
    <fullName>International_Dial_Out_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>If checked, allows chairperson to dial-out to Int’l participants from the audio bridge.</inlineHelpText>
    <label>International Dial Out Allowed</label>
    <type>Checkbox</type>
</CustomField>