force-app/main/default/objects/Subscription__c/fields/Keep_Active__c.field-meta.xml
<CustomField>
    <fullName>Keep_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to yes when a customer request an unused account be kept active</description>
    <inlineHelpText>Set to yes when a customer request an unused account be kept active</inlineHelpText>
    <label>Keep Active</label>
    <type>Checkbox</type>
</CustomField>