force-app/main/default/objects/Subscription__c/fields/Kit_Name__c.field-meta.xml
<CustomField>
    <fullName>Kit_Name__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>Internal code for RT Provisioning kits.</inlineHelpText>
    <label>Kit Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RTS</fullName>
                <default>true</default>
                <label>RTS</label>
            </value>
            <value>
                <fullName>RTD</fullName>
            </value>
            <value>
                <fullName>RTHW</fullName>
            </value>
            <value>
                <fullName>RTSSD</fullName>
            </value>
            <value>
                <fullName>RTLF</fullName>
            </value>
            <value>
                <fullName>RTSWBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>