force-app/main/default/objects/Subscription__c/fields/Last_Change_Date_for_Audio_Ports__c.field-meta.xml
<CustomField>
    <fullName>Last_Change_Date_for_Audio_Ports__c</fullName>
    <label>Last Change Date for Audio Ports</label>
    <type>Date</type>
</CustomField>