force-app/main/default/objects/Subscription__c/fields/Last_Number_of_Audio_Ports__c.field-meta.xml
<CustomField>
    <fullName>Last_Number_of_Audio_Ports__c</fullName>
    <label>Last Number of Audio Ports</label>
    <length>255</length>
    <type>Text</type>
</CustomField>