force-app/main/default/objects/Subscription__c/fields/Lync_Plug_In_Last_Used_Date_Count__c.field-meta.xml
<CustomField>
    <fullName>Lync_Plug_In_Last_Used_Date_Count__c</fullName>
    <description>A hidden field used to calculate the connectivity tool adoption for Accounts and AMs book of business.</description>
    <formula>IF( ISBLANK(  Lync_Plugin_Last_Used_Date__c  ), 0, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A hidden field used to calculate the connectivity tool adoption for Accounts and AMs book of business.  If date field filled in, then 1 is inserted into this field.  If date field is blank, then 0 is interested to this field</inlineHelpText>
    <label>Lync Plug In Last Used Date Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>