force-app/main/default/objects/Subscription__c/fields/Parent_Ind_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Ind_ID__c</fullName>
    <description>Billing Individual id of this subscription&#39;s contact</description>
    <label>Parent Ind ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>