force-app/main/default/objects/Subscription__c/fields/Passcode__c.field-meta.xml
<CustomField>
    <fullName>Passcode__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <inlineHelpText>4-9 digit private passcode used by chairperson to launch and audio/web conferences.</inlineHelpText>
    <label>Passcode</label>
    <length>64</length>
    <type>Text</type>
</CustomField>