force-app/main/default/objects/Subscription__c/fields/Passcode_updated__c.field-meta.xml
<CustomField>
    <fullName>Passcode_updated__c</fullName>
    <description>This is a hidden field which will be used as a flag: before the current passcode has been fetched from GX &amp; shown to the user, this field will hold one value &amp; then, after the process is complete, will be flipped to something else. Do not show this field to anyone (except maybe admin)</description>
    <label>Passcode updated</label>
    <length>20</length>
    <type>Text</type>
</CustomField>