force-app/main/default/objects/Subscription__c/fields/PGi__c.field-meta.xml
<CustomField>
    <fullName>PGi__c</fullName>
    <description>PGi Skype For Business Moderator Passcode</description>
    <label>PGi Moderator Passcode</label>
    <length>25</length>
    <type>Text</type>
</CustomField>