force-app/main/default/objects/Subscription__c/fields/PGi_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>PGi_Client_ID__c</fullName>
    <label>PGi Client ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>