force-app/main/default/objects/Subscription__c/fields/PGi_Client_ID_S4B__c.field-meta.xml
<CustomField>
    <fullName>PGi_Client_ID_S4B__c</fullName>
    <description>Client ID used for Skype for Business services.</description>
    <label>PGi Client ID (S4B)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>