force-app/main/default/objects/Subscription__c/fields/PGi_Conference_ID__c.field-meta.xml
<CustomField>
    <fullName>PGi_Conference_ID__c</fullName>
    <description>PGi Skype For Business Conference ID</description>
    <label>PGi Conference ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>