force-app/main/default/objects/Subscription__c/fields/PGi_Passcode__c.field-meta.xml
<CustomField>
    <fullName>PGi_Passcode__c</fullName>
    <description>PGi Skype for Business Passcode</description>
    <label>PGi Passcode</label>
    <length>25</length>
    <type>Text</type>
</CustomField>