force-app/main/default/objects/Subscription__c/fields/PGi_Toll_Free_Number__c.field-meta.xml
<CustomField>
    <fullName>PGi_Toll_Free_Number__c</fullName>
    <description>PGi Skype for Business Toll Free phone number</description>
    <label>PGi Toll Free Number</label>
    <type>Phone</type>
</CustomField>