force-app/main/default/objects/Subscription__c/fields/PGi_Toll_Number__c.field-meta.xml
<CustomField>
    <fullName>PGi_Toll_Number__c</fullName>
    <description>PGi Skype For Business Toll phone number</description>
    <label>PGi Toll Number</label>
    <type>Phone</type>
</CustomField>